[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Async-SdamGia-Api"
version = "0.0.1"
description = "Python module for interacting with the educational platform Sdam GIA"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "sayrrexe", email = "sayrrexe@gmail.com" },
]
keywords = ["sdamgia", "ege", "education", "api", "scraping"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "grabzit>=3.5.7.1",
    "html2image>=2.0.7",
    "httpx>=0.28.1",
    "pyppeteer>=2.0.0",
    "pytesseract>=0.3.13",
]

[project.urls]
Repository = "https://github.com/Sayrrexe/Async-SdamGia-Api"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
]

[tool.setuptools]
packages = ["sdamgia"]

[tool.pytest.ini_options]
markers = [
    "live: live tests against real sdamgia.ru endpoints",
]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
